[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Login.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.819608, 0.164706, 0.164706, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Login" type="Node2D"]
z_index = 500
script = ExtResource( 1 )

[node name="WindowDialog" type="WindowDialog" parent="."]
visible = true
margin_right = 400.0
margin_bottom = 816.0
rect_pivot_offset = Vector2( 245.574, 242.758 )
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mobile" type="LineEdit" parent="WindowDialog"]
margin_left = 82.8978
margin_top = 155.939
margin_right = 320.898
margin_bottom = 197.939
rect_pivot_offset = Vector2( 136.86, 42 )
caret_blink = true
caret_blink_speed = 0.5

[node name="Code" type="LineEdit" parent="WindowDialog"]
visible = false
margin_left = 84.0203
margin_top = 227.777
margin_right = 322.02
margin_bottom = 269.777
rect_pivot_offset = Vector2( 136.86, 42 )
caret_blink = true
caret_blink_speed = 0.5

[node name="Label" type="Label" parent="WindowDialog"]
margin_left = 116.0
margin_top = 97.0
margin_right = 260.0
margin_bottom = 132.0
text = "Mobile Number"
align = 1
valign = 1

[node name="SubmitButton" type="ToolButton" parent="WindowDialog"]
margin_left = 93.1644
margin_top = 292.963
margin_right = 304.164
margin_bottom = 329.963
custom_styles/normal = SubResource( 1 )
text = "Submit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="WindowDialog"]
margin_left = 29.0
margin_top = 387.0
margin_right = 371.0
margin_bottom = 669.0
readonly = true
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SendMobile" type="HTTPRequest" parent="."]

[node name="SendCode" type="HTTPRequest" parent="."]
[connection signal="pressed" from="WindowDialog/SubmitButton" to="." method="_on_ToolButton_pressed"]
